# parallel-groupby

./: .clangd  .gitignore  CMakeLists.txt  README.md  analyze.ipynb  justfile  mkdocs.yml  plotting.ipynb  prepare.sh  profile.sh  requirements.txt  setup.sh
analysis/: exp-plot-all.py  exp-plotting.ipynb  plotting.ipynb
benchmark/: adaptation-curve-ghc.sh  bench.py  bench_polars.py  experiment.sh  extract.py  justfile  plot.py  plot_metrics.py  test_cpp.py  test_duckdb.py  tpch_duckdb.py
benchmark/tpch/: duckdb.py
data/: download.sh  generate.ipynb  prepare.sh
docs/: 404.html
docs/search/: search_index.json
results/: adversarial-exp.parquet  curve3-alg123.parquet  psc-baselines-2.parquet
scripts/: build.sh  evaluate.sh  generate.sh  setup.sh
shiroa/: book.typ  justfile  milestone.typ  proposal.typ  references.bib  report.typ  template.typ  test.typ  web-milestone.typ  web-proposal.typ  web-report.typ
shiroa/templates/: page.typ
shiroa/themes/mdbook-mod/: README.md  head.hbs  header.hbs  index.hbs
site/: index.html
site/proposal/: index.html
src/: .clang-format  generate.cpp  lib.cpp  lib.hpp  lock-free-hash-table.cpp  main-col-major.cpp  main.cpp  radix-partition-then-merge.cpp  reference-main.cpp  two-phase-central-merge.cpp
src-go/: go.mod  main.go
src-rs/: Cargo.toml  build.rs
src-rs/src/: main.rs
src/algs/: _all_algs.hpp  adaptive-alg1.cpp  adaptive-alg2.cpp  adaptive-alg3.cpp  adaptive-alg4.cpp  duckdbish-two-phase.cpp  global-lock.cpp  implicit-repartitioning.cpp  lock-free-hash-table.cpp  omp-lock-free-hash-table.cpp  sequential.cpp  single-thread.cpp  single-thread.hpp  three-phase-radix.cpp  two-phase-central-merge-xxhash.cpp  two-phase-central-merge.cpp  two-phase-central-merge.hpp  two-phase-radix-xxhash.cpp  two-phase-radix.cpp  two-phase-tree-merge.cpp
src/legacy/: reference-main.cpp  two-phase-central-merge.cpp
visualize/: dist_visualise.ipynb  generate.ipynb
wiki/: proposal.md
